package businesslogic.kitchentask;

import businesslogic.menu.Menu;
import businesslogic.recipe.KitchenDuty;

import java.util.ArrayList;

public class SummarySheet {
    private ArrayList<Task> tasks;
    private ArrayList<KitchenDuty> extraDuties;

    public SummarySheet(Menu menu){
        //TODO costruttore
    }

    public Task addExtraDuty(KitchenDuty kitchenDuty){
        //TODO
        return null;
    }

    public void deleteExtraDuty(KitchenDuty kitchenDuty){
        //TODO
    }

    public void deleteAllTasks(){
        //TODO
    }

}
