package businesslogic.menu;

public interface MenuEventReceiver {
    public void updateMenuCreated(Menu m);
}
