package businesslogic.turn;

public class TurnManager {
}
